# cogimon-gazebo-models

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  database.config
BI-kuka-lwr-4plus-triangle-tilted-bh8-setup/: model.config  model.srdf  model.urdf
CableReel/: model.config  model.sdf
barrett-bh8/: model.config  model.urdf
barrett-bh8-old/: model.urdf
barrett-bh8-old/plugin/: CMakeLists.txt  mimic_plugin.cpp
boris-ft/: model.config  model.srdf  model.urdf
coman/: coman.urdf  model.config
festo-axis/: model.config  model.sdf  model.srdf  model.urdf
franka/: model.config  model.srdf  model.urdf
franka-hand/: model.config  model.urdf
franka-panda-arm/: model.config  model.srdf  model.urdf
franka-panda-arm-hand/: model.config  model.urdf
iit-cogimon/: cogimon.srdf  model.config  model.urdf
iit-cogimon-pennacchio/: cogimon.srdf  empty.world  model.config
iit-coman/: coman.srdf  model.urdf
iit-coman-hardware/: coman.srdf  model.config  model.urdf
iit-coman-iCub-head/: coman.srdf  model.config  model.urdf
iit-coman-lowerbody-only/: coman_lowerbody_only.srdf  model.config  model.urdf
iit-coman-no-forearms/: coman_no_forearms.srdf  model.urdf
iit-coman-no-forearms-fixed-lowerbody/: coman_no_forearms.srdf  model.config  model.urdf
iit-coman-xtion/: coman.srdf  model.config  model.urdf
klemme1/: klemme1.blend  model.config  model.sdf
kuka-artificial11DOF/: model.config  model.sdf  model.srdf  model.urdf
kuka-festo-8dof/: model.config  model.sdf  model.srdf  model.urdf
kuka-iiwa-14/: model.config  model.srdf  model.urdf
kuka-iiwa-7/: model.config  model.srdf  model.urdf  model_old.urdf
kuka-iiwa-7-schunk-egp-40/: model.config  model.srdf  model.urdf
kuka-lwr-3/: model.config  model.srdf  model.urdf
kuka-lwr-4plus-bh8-mod/: model.config  model.srdf  model.urdf
kuka-lwr-4plus-ft/: model.sdf  (+5 more)
(+125 files in other folders)
